frontend and backend using azure

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechStore - Premium Electronics | Buy Now</title>
+    <title>maplecart - Premium Electronics | Buy Now</title>
     <meta name="description" content="Shop premium wireless headphones with secure checkout. Experience crystal-clear audio with 30-hour battery life and active noise cancellation." />
-    <meta name="author" content="TechStore" />
+    <meta name="author" content="maplecart" />
 
-    <meta property="og:title" content="TechStore - Premium Electronics" />
+    <meta property="og:title" content="maplecart - Premium Electronics" />
     <meta property="og:description" content="Shop premium wireless headphones with secure checkout and fast shipping." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
